@@ -114,10 +114,5 @@ class FidoConstants {
          * JSON key value of id in response of Webauthn JSON object.
          */
         const val WEBAUTHN_RESPONSE_ID_JSON_KEY = "id"
-
-        /**
-         * Used to disable passkey logic until the feature is ready.
-         */
-        const val IS_PASSKEY_SUPPORT_READY = false
     }
 }
